--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,9 @@
         android:id="@+id/switchThemeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Сменить тему" />
+        android:text="Сменить тему"
+        android:layout_marginTop="42dp"
+        android:layout_marginStart="240dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
