--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -23,6 +23,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Начать"
-        android:paddingTop="32dp"/>
+        android:layout_marginTop="24dp"/>
 
 </LinearLayout>
