--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- res/layout/activity_main.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <include layout="@layout/category_spinner" />
     <Button
         android:id="@+id/switchThemeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Сменить тему"
         android:layout_marginTop="36dp"
-        android:layout_marginStart="240dp"/>
+        android:layout_marginStart="12dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="82dp"/>
+        android:layout_marginTop="90dp"/>
 
 </RelativeLayout>
