--- a/app/src/main/res/layout/item_object.xml
+++ b/app/src/main/res/layout/item_object.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- res/layout/item_object.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,16 +14,27 @@
         android:scaleType="centerCrop"
         android:layout_marginHorizontal="12dp"/>
 
-<TextView
-android:id="@+id/nameTextView"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:textSize="16sp"
-android:textStyle="bold"
-    android:layout_toEndOf="@id/imageView"
-    android:layout_marginHorizontal="12dp"
-    android:layout_marginTop="16dp"
-    android:layout_alignTop="@id/imageView"/>
+    <TextView
+        android:id="@+id/nameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_toEndOf="@id/imageView"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="8dp"
+        android:layout_alignTop="@id/imageView"/>
+
+    <TextView
+        android:id="@+id/categoryView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:layout_toEndOf="@id/imageView"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="40dp"
+        android:layout_alignTop="@id/imageView"/>
 
     <Button
         android:id="@+id/buttonDownload"
