--- a/app/src/main/res/layout/category_spinner.xml
+++ b/app/src/main/res/layout/category_spinner.xml
@@ -5,19 +5,12 @@
     android:orientation="vertical"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/labelCategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Категория"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="260dp"/>
 
     <Spinner
         android:id="@+id/categorySpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"/>
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="200dp"
+        android:background="@drawable/rounded_background" />
 </LinearLayout>
